--- a/01-2columnas_iguales_css_grid/css/styles.css
+++ b/01-2columnas_iguales_css_grid/css/styles.css
@@ -39,3 +39,13 @@ h1 {
 }
 
 /** CODIGO AQUI **/
+
+@media (min-width: 768px){
+    .dos-columnas {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: 50% 50%;
+        grid-template-columns: 1fr 1fr;
+        gap: 2rem;
+    }
+}
