--- a/05-3columnas_css_grid/css/styles.css
+++ b/05-3columnas_css_grid/css/styles.css
@@ -49,3 +49,25 @@ p {
 
 
 /** CODIGO AQUI **/
+@media (min-width: 768px){
+    .tres-columnas {
+        display: grid;
+        grid-template-areas: "izq cen der";
+        grid-template-columns: 20% 60% 20%;
+        grid-auto-flow: column;
+        gap: 2rem;
+    }    
+}
+.as1 {
+    /* grid-column: 2 / 3;
+    grid-row: 2 / 3; */
+}
+.as2 {
+    /* grid-column: 1 / 2;
+    grid-row: 1 / 2; */
+}
+.tres-columnas main {
+    /* grid-column: 1 / 3; */
+    /* grid-column: 2 / 3; */
+    grid-area: cen;
+}
