--- a/07-column_drop_css_grid/css/styles.css
+++ b/07-column_drop_css_grid/css/styles.css
@@ -50,3 +50,28 @@ p {
 
 
 /** CODIGO AQUI **/
+
+@media (min-width: 480px){
+    .grid-drop {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 2rem;
+    }
+    .as1 {
+        grid-column: 1 / 3;
+        grid-row: 2 / 3;
+    }
+}
+@media (min-width: 768px){
+    .grid-drop {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+    }
+    .as1 {
+        grid-column: 2 / 3;
+        grid-row: unset;
+    }
+    .as2 {
+        grid-column: 3 / 4 ;
+    }
+}
