--- a/08-column_drop_flexbox/css/styles.css
+++ b/08-column_drop_flexbox/css/styles.css
@@ -48,3 +48,20 @@ p {
 }
 
 /** CODIGO AQUI **/
+
+@media (min-width: 480px){
+    .flex-drop {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
+    main,
+    .as1 {
+        flex-basis: calc(50% - 1rem);
+    }
+}
+@media (min-width: 768px){
+    main, .as1 , .as2 {
+        flex-basis: calc(33.3% - 1rem);
+    }
+}
