--- a/09-con_sidebar_css_grid/css/styles.css
+++ b/09-con_sidebar_css_grid/css/styles.css
@@ -48,3 +48,19 @@ p {
 }
 
 /** CODIGO AQUI **/
+
+@media (min-width: 768px){
+    .con-si {
+        display: grid;
+        grid-template-columns: 1fr 3fr;
+        column-gap: 5rem;
+        grid-auto-flow: column;
+    }
+    .con-si aside {
+        grid-column: 1 / 2;
+        /* grid-row: 1 / 2; */
+    }
+    /* .con-si article {
+        grid-column: 2 / 3;
+    } */
+}
