--- a/11-layout_shifter_css_grid/css/styles.css
+++ b/11-layout_shifter_css_grid/css/styles.css
@@ -49,3 +49,33 @@ p {
 
 
 /** CODIGO AQUI **/
+@media (min-width: 768px){
+    .layout-shifter {
+        display: grid;
+        grid-template-areas: "contenido"
+                             "inferior";
+                            }
+                            .side {
+        grid-area: inferior;
+    }
+    .principal{
+        grid-area: contenido;
+        display: grid;
+        gap: 2rem;
+        grid-template-areas: "entrada1 entrada2";
+    }
+}   
+@media (min-width: 992px){
+    .layout-shifter {
+        grid-template-areas: "contenido sidebar";
+        gap: 2rem;
+    }
+    .side {
+        grid-area: sidebar;
+    }
+    .principal{
+        grid-area: contenido;
+        grid-template-areas: "entrada1"
+                             "entrada2";
+    }
+}
