--- a/12-layout_shifter_flexbox/css/styles.css
+++ b/12-layout_shifter_flexbox/css/styles.css
@@ -48,3 +48,32 @@ p {
 }
 
 /** CODIGO AQUI **/
+
+@media (min-width: 768px){
+    .layout-shifter{
+        display: flex;
+        flex-direction: column-reverse;
+    }
+    .principal {
+        display: flex;
+        gap: 2rem;
+    }
+}
+@media (min-width: 992px){
+    .layout-shifter{
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    .aside {
+        order: 2;
+        flex: 0 0 calc(33.3% - 2rem);
+    }
+    .principal {
+        flex: 0 0 calc(66.6% - 2rem);
+        flex-wrap: wrap;
+    }
+    .entrada-blog {
+        flex: 0 0 calc(100% - 2rem);
+    }
+}
+
